[gd_scene load_steps=4 format=3 uid="uid://bykl7s3j04ku3"]

[ext_resource type="Script" uid="uid://tl634t0lhho8" path="res://scripts/part.gd" id="1_u2lah"]
[ext_resource type="Texture2D" uid="uid://croiiv26pflt4" path="res://icon.svg" id="2_u3hhk"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_u2lah"]

[node name="PartMkI" type="Node2D"]
script = ExtResource("1_u2lah")
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_u3hhk")

[node name="Button" type="Button" parent="."]
self_modulate = Color(1, 1, 1, 0)
offset_left = -64.0
offset_top = -64.0
offset_right = 64.0
offset_bottom = 64.0

[node name="Connector" type="Area2D" parent="."]
position = Vector2(64, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Connector"]
shape = SubResource("RectangleShape2D_u2lah")

[node name="ColorRect" type="ColorRect" parent="Connector"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -10.0
offset_top = -10.0
offset_right = 10.0
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2

[node name="Connector2" type="Area2D" parent="."]
position = Vector2(-64, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Connector2"]
shape = SubResource("RectangleShape2D_u2lah")

[node name="ColorRect" type="ColorRect" parent="Connector2"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -10.0
offset_top = -10.0
offset_right = 10.0
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2

[node name="Connector3" type="Area2D" parent="."]
position = Vector2(0, -64)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Connector3"]
shape = SubResource("RectangleShape2D_u2lah")

[node name="ColorRect" type="ColorRect" parent="Connector3"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -10.0
offset_top = -10.0
offset_right = 10.0
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2

[node name="Connector4" type="Area2D" parent="."]
position = Vector2(0, 64)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Connector4"]
shape = SubResource("RectangleShape2D_u2lah")

[node name="ColorRect" type="ColorRect" parent="Connector4"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -10.0
offset_top = -10.0
offset_right = 10.0
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2

[connection signal="button_down" from="Button" to="." method="_on_button_button_down"]
[connection signal="button_up" from="Button" to="." method="_on_button_button_up"]
[connection signal="area_entered" from="Connector" to="." method="_on_connector_area_entered"]
[connection signal="area_entered" from="Connector2" to="." method="_on_connector_area_entered"]
[connection signal="area_entered" from="Connector3" to="." method="_on_connector_area_entered"]
[connection signal="area_entered" from="Connector4" to="." method="_on_connector_area_entered"]
